src/pages/Home/Home.scss
@use "/src/scss/util" as u;

.home {
  position: relative;
	background-color: var(--background-secondary);

	&__features {
		display: flex;
    flex-wrap: wrap;
    gap: u.rem(32);
	}

	&__feature {
		flex: 1;
    min-width: 350px;

		background-color: var(--background-primary-shade);
		border-radius: var(--br-light);
		overflow: hidden;
	}
}

.feature {
  display: flex;
  flex-direction: column;

  &__header,
  &__footer {
    flex-grow: 0;
  }

  &__content {
    flex-shrink: 0;
    flex-grow: 1;
  }

	&__header {
		position: relative;
	}

	&__heading {
		position: absolute;
		bottom: 0;

    display: block;
    margin-block-end: 0;
    padding: u.rem(32);
    width: 100%;

		color: white;
    background: linear-gradient(hsl(0, 0%, 0%, 0), hsl(0, 0%, 0%, 0.8));
	}

	&__image {
		object-fit: cover;
		filter: grayscale(1);
		aspect-ratio: 3 / 2;
	}

	&__content,
  &__footer {
		margin-inline: u.rem(32);
	}

  &__list {
    display: flex;
    flex-direction: column;
    gap: u.rem(16);
    margin-block: u.rem(32);
  }

	&__link {
		display: inline-block;

		border-style: solid;
		border-width: 2px;
		padding: u.rem(8) u.rem(16);

		font-weight: 500;
		text-transform: uppercase;
		letter-spacing: 1px;

		color: white;
		background-color: var(--cl-primary);
		border-color: var(--cl-primary);
		border-radius: var(--br-light);

		transition-property: color, background-color;
		transition-duration: 800ms;

		&::after {
			content: "➞";
			display: inline-block;
			margin-inline-start: 1ch;

			transition-property: transform;
			transition-duration: 800ms;
		}

		&:hover {
			color: var(--cl-primary);
			background-color: var(--background-primary-shade);
			transition-duration: 200ms;

			&::after {
				transition-duration: 200ms;
				transform: translateX(50%);
			}
		}

		&:active {
			background-color: var(--cl-secondary);
		}
	}

  &__footer {
    margin-block-end: u.rem(32);
  }
}

.latest-pub {
  display: flex;
  flex-direction: column;
  gap: u.rem(8);

  &:not(:last-child) {
    border-bottom: solid 1px gray;
    padding-bottom: u.rem(16);
  }

  &__instruments {
		font-family: var(--sans-serif);
		font-weight: 700;
		text-transform: uppercase;

		color: var(--heading-secondary);
	}

  &__link {
    font-family: var(--sans-serif);
    font-size: 16px;
		font-weight: 500;
		text-transform: uppercase;
		text-wrap: pretty;
		text-decoration-thickness: 1px;
		text-underline-offset: 2px;
		line-height: 1.2;

		color: var(--cl-primary);

		&:hover {
			text-decoration: underline;
			text-decoration-thickness: 1px;
		}

		& .new-tab-message {
			display: block;
			margin-block-start: u.rem(4);
			font-family: inherit;
			font-weight: 300;
			opacity: 0.75;
		}
	}
}

.featured-vid {
  display: flex;
  flex-direction: column;
  gap: u.rem(16);
  margin-block: u.rem(32);
}

